@@ -112,6 +112,7 @@ void mcus_new_program (void);
 void mcus_open_program (void);
 void mcus_save_program (void);
 void mcus_save_program_as (void);
+void mcus_open_file (gchar *filename);
 void mcus_quit (void);
 
 G_END_DECLS
